fix problem with kyc and process bridge
